feat(content): フッターの企業説明文を更新
- 日本語: 「小さな拠点から、無限の可能性を創造する」
- 英語: 「From a small base, expanding infinite possibilities」

より企業理念を反映した表現に変更

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,7 +77,7 @@
     }
   },
   "footer": {
-    "description": "Building the future through innovative technology solutions",
+    "description": "From a small base, expanding infinite possibilities",
     "services": {
       "title": "Services",
       "items": [
