--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -77,7 +77,7 @@
     }
   },
   "footer": {
-    "description": "革新的な技術ソリューションで未来を創造する",
+    "description": "小さな拠点から、無限の可能性を創造する",
     "services": {
       "title": "サービス",
       "items": [
