--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,24 +81,129 @@
     "services": {
       "title": "Services",
       "items": [
-        "Web Development",
-        "Mobile App Development",
-        "Cloud Solutions",
-        "Custom Development"
+        { "label": "Web Development", "href": "/#services" },
+        { "label": "Mobile App Development", "href": "/#services" },
+        { "label": "Cloud Solutions", "href": "/#services" },
+        { "label": "Custom Development", "href": "/#services" }
       ]
     },
     "company": {
       "title": "Company",
       "items": [
-        "About Us",
-        "Careers",
-        "Privacy Policy",
-        "Terms of Service"
+        { "label": "About Us", "href": "/#about" },
+        { "label": "Careers", "href": "/#about" },
+        { "label": "Privacy Policy", "href": "/privacy-policy" },
+        { "label": "Terms of Service", "href": "/#about" }
       ]
     },
     "copyright": "© {{year}} tent space Inc. All rights reserved."
   },
   "meta": {
     "title": "tent␣ - Custom Software Development"
+  },
+  "privacy": {
+    "backToHome": "Back to Home",
+    "title": "Privacy Policy",
+    "sections": [
+      {
+        "title": "Introduction",
+        "content": [
+          "tent space Inc. (hereinafter referred to as 'the Company') recognizes the importance of protecting personal information in the services provided on this website and complies with the Act on the Protection of Personal Information. We have established the following privacy policy (hereinafter referred to as 'this Policy')."
+        ]
+      },
+      {
+        "title": "Article 1 (Definition of Personal Information)",
+        "content": [
+          "'Personal information' refers to 'personal information' as defined in the Act on the Protection of Personal Information, and refers to information about a living individual that can identify a specific individual by name, date of birth, address, telephone number, contact information, or other descriptions contained in such information, as well as data related to appearance, fingerprints, voiceprints, and health insurance card insurer numbers, etc. that can identify a specific individual from the information alone (personal identification information)."
+        ]
+      },
+      {
+        "title": "Article 2 (Business Information)",
+        "content": [
+          "Company Name: tent space Inc.\nAddress: 323 Tsunoyama, Ogawa, Hiki District, Saitama 355-0316, Japan\nRepresentative: Ayako Ishii"
+        ]
+      },
+      {
+        "title": "Article 3 (Method of Obtaining Personal Information)",
+        "content": [
+          "The Company may ask for personal information such as name, date of birth, address, telephone number, email address, bank account number, credit card number, and driver's license number when customers register for use.",
+          "In addition, the Company may collect transaction records and payment information, including personal information of customers, from the Company's partners (including information providers, advertisers, and ad delivery destinations, hereinafter referred to as 'partners')."
+        ]
+      },
+      {
+        "title": "Article 4 (Purpose of Using Personal Information)",
+        "content": [
+          "The purposes for which the Company uses personal information are as follows:",
+          "1. To provide and operate the Company's services",
+          "2. To respond to inquiries from customers (including identity verification)",
+          "3. To send emails about new features, updates, campaigns, etc., of the services being used by customers, and other services provided by the Company",
+          "4. To contact customers as necessary for maintenance, important notices, etc.",
+          "5. To identify users who violate the terms of use or attempt to use the services for fraudulent or improper purposes, and to refuse their use",
+          "6. To allow customers to view, change, or delete their registered information and view their usage status",
+          "7. To charge customers for usage fees in paid services",
+          "8. For purposes incidental to the above purposes of use"
+        ]
+      },
+      {
+        "title": "Article 5 (Change of Purpose of Use)",
+        "content": [
+          "The Company shall change the purpose of use of personal information only when it is reasonably recognized that the purpose of use is related to that before the change.",
+          "If the purpose of use is changed, the Company shall notify the customer of the changed purpose by the method prescribed by the Company or announce it on this website."
+        ]
+      },
+      {
+        "title": "Article 6 (Security Measures for Personal Data)",
+        "content": [
+          "The Company shall take necessary and appropriate measures to prevent leakage, loss, or damage of personal information and to otherwise secure the safety of personal information."
+        ]
+      },
+      {
+        "title": "Article 7 (Provision of Personal Data to Third Parties)",
+        "content": [
+          "1. The Company will not provide personal information to third parties without obtaining the prior consent of the customer, except in the following cases. However, this does not apply when permitted by the Act on the Protection of Personal Information or other laws and regulations.",
+          "1-1. When it is necessary to protect a person's life, body, or property and it is difficult to obtain the consent of the person",
+          "1-2. When it is particularly necessary to improve public health or promote the sound growth of children and it is difficult to obtain the consent of the person",
+          "1-3. When it is necessary to cooperate with a national agency, a local government, or a person entrusted by them to execute affairs prescribed by laws and regulations, and obtaining the consent of the person may hinder the execution of such affairs",
+          "1-4. When the following matters have been announced or published in advance, and the Company has notified the Personal Information Protection Commission",
+          "・Including provision to third parties in the purpose of use",
+          "・Items of data provided to third parties",
+          "・Means or method of provision to third parties",
+          "・Stopping the provision of personal information to third parties at the request of the person",
+          "・Method of accepting requests from the person",
+          "2. Notwithstanding the provisions of the preceding paragraph, the following cases do not fall under third parties.",
+          "2-1. When the Company entrusts all or part of the handling of personal information within the scope necessary to achieve the purpose of use",
+          "2-2. When personal information is provided due to business succession by merger or other reasons",
+          "2-3. When personal information is used jointly with a specific person, and the person is notified in advance or placed in a state where the person can easily know the items of personal information to be used jointly, the scope of joint users, the purpose of use by the users, and the name or name of the person responsible for the management of the personal information"
+        ]
+      },
+      {
+        "title": "Article 8 (Procedures for Personal Data)",
+        "content": [
+          "The Company shall disclose personal information or records of provision to third parties at the request of the customer, except in the following cases:",
+          "1. When there is a risk of harm to the life, body, property, or other rights and interests of the person or a third party",
+          "2. When there is a risk of significant hindrance to the proper execution of the Company's business",
+          "3. When it violates other laws and regulations",
+          "4. When it cannot be confirmed that the request for disclosure is from the person"
+        ]
+      },
+      {
+        "title": "Article 9 (Suspension of Use of Personal Information, etc.)",
+        "content": [
+          "The Company shall conduct necessary investigations without delay when requested by the customer to suspend or delete the use of personal information (hereinafter referred to as 'suspension of use, etc.') on the grounds that it is being handled beyond the scope of the purpose of use or that it was obtained by fraudulent means.",
+          "Based on the results of the investigation, if it is determined that it is necessary to comply with the request, the Company shall suspend the use of the personal information, etc. without delay.",
+          "The Company shall notify the customer without delay when the suspension of use, etc. has been carried out or when it has been decided not to carry out the suspension of use, etc.",
+          "If the suspension of use, etc. involves a large amount of cost or if it is difficult to carry out the suspension of use, etc., and if alternative measures necessary to protect the rights and interests of the customer can be taken, the Company shall take these alternative measures."
+        ]
+      },
+      {
+        "title": "Article 10 (Contact for Inquiries and Complaints Regarding Handling of Personal Information)",
+        "content": [
+          "For questions, inquiries, complaints, or other inquiries regarding the handling of personal information by the Company, please contact the following:",
+          "Address: 323 Tsunoyama, Ogawa, Hiki District, Saitama 355-0316, Japan\nCompany Name: tent space Inc.\nEmail Address: back-office@tentspace.net"
+        ]
+      }
+    ],
+    "lastUpdated": "Last updated: {{date}}",
+    "updateDate": "November 25, 2024"
   }
 } 
