--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -76,12 +76,12 @@
         },
         {
           "icon": "Rocket",
-          "title": "価値創造",
+          "title": "イノベーション・ファースト",
           "description": "最新技術を効果的に活用し、お客様のビジネスに真の価値をもたらすソリューションを実現します。"
         },
         {
           "icon": "Users",
-          "title": "信頼関係の構築",
+          "title": "クライアントパートナーシップ",
           "description": "お客様の成功を第一に考え、長期的なパートナーシップを大切にします。"
         },
         {
