feat(contact): Implement formspree contact form with improved success message
- Add formspree integration for contact form submission
- Add loading and success states with translations
- Improve form validation with error messages
- Add success message UI with check icon
- Update translations for form states in both languages

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -119,7 +119,10 @@
       "name": "お名前",
       "email": "メールアドレス",
       "message": "メッセージ",
-      "submit": "送信する"
+      "submit": "送信する",
+      "sending": "送信中...",
+      "success": "メッセージを送信しました。担当者が確認次第、ご連絡させていただきます。",
+      "successTitle": "送信完了"
     }
   },
   "footer": {
@@ -296,5 +299,19 @@
         ]
       }
     ]
+  },
+  "chatWidget": {
+    "header": {
+      "title": "チャットでお問い合わせ",
+      "subtitle": "通常数分以内に返信いたします"
+    },
+    "messages": {
+      "welcome": "こんにちは！ご用件をお聞かせください。",
+      "autoReply": "メッセージありがとうございます。担当者が確認次第、ご連絡させていただきます。"
+    },
+    "input": {
+      "placeholder": "メッセージを入力...",
+      "send": "送信"
+    }
   }
 } 
