--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -119,7 +119,10 @@
       "name": "Your Name",
       "email": "Your Email",
       "message": "Your Message",
-      "submit": "Send Message"
+      "submit": "Send Message",
+      "sending": "Sending...",
+      "success": "Thank you for your message. We will get back to you soon!",
+      "successTitle": "Message Sent"
     }
   },
   "footer": {
@@ -296,5 +299,19 @@
         ]
       }
     ]
+  },
+  "chatWidget": {
+    "header": {
+      "title": "Chat with us",
+      "subtitle": "We typically reply within a few minutes"
+    },
+    "messages": {
+      "welcome": "Hi! How can I help you today?",
+      "autoReply": "Thanks for your message! Our team will get back to you soon."
+    },
+    "input": {
+      "placeholder": "Type your message...",
+      "send": "Send"
+    }
   }
 } 
