feat: fix description

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -148,7 +148,7 @@
     "copyright": "© {{year}} tent space Inc. All rights reserved."
   },
   "meta": {
-    "title": "tent␣ - Custom Software Development"
+    "title": "tent␣ - AI Driven Development"
   },
   "privacy": {
     "title": "Privacy Policy",
