--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -148,7 +148,7 @@
     "copyright": "© {{year}} tent space Inc. All rights reserved."
   },
   "meta": {
-    "title": "株式会社tent space（テントスペース）- カスタムソフトウェア開発"
+    "title": "株式会社tent space（テントスペース）- AI駆動開発"
   },
   "privacy": {
     "title": "プライバシーポリシー",
